--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "theme/academic"]
-	path = theme/academic
+[submodule "themes/academic"]
+	path = themes/academic
 	url = https://github.com/gcushen/hugo-academic.git
